--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>株式会社ストンピィ - Stompy</title>
     <meta name="keywords" content="ストンピィ,stompy"/>
     <meta name="description" content="ブラウザゲームの開発運営。"/>
-    <link rel="shortcut icon" href="https://stompy-inc.github.io/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <style type="text/css">
         body {
             color: #383530;
