--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
@@ -9,26 +8,11 @@
     <meta name="description" content="ブラウザゲームの開発運営。"/>
     <link rel="shortcut icon" href="/favicon.png">
     <style type="text/css">
-        body {
-            color: #383530;
-            font-family:'メイリオ', sans-serif,'Lucida Grande', Verdana, Arial, 'Hiragino Kaku Gothic Pro', Meiryo;
-            line-height: 1.3;
-            margin:0;padding:0;
-        }
+        body {color: #383530;font-family:'メイリオ', sans-serif,'Lucida Grande', Verdana, Arial, 'Hiragino Kaku Gothic Pro';line-height: 1.3;margin:0;padding:0;}
         a{color:#383530;}
-        img a{border:none;}
         div{margin:0;padding:0;}
-        table{
-          border-collapse:collapse;
-          border:none;
-          border-spacing:0;
-        }
-        th,td{
-          vertical-align:top;
-          border:none;
-          font-weight:normal;
-          text-align:left;
-        }
+        table{font-size:.8em;text-align:left;border-collapse:collapse;border:none;border-spacing:0;}
+        th,td{vertical-align:top;border:none;font-weight:normal;}
         table th{font-weight:normal;padding:5px 0;margin:0;}
         table tr{padding:0;margin:0;}
         table td{padding:5px 0 5px 5px;margin:0;}
@@ -39,7 +23,7 @@
     <div style="width:280px;padding:30px 0 30px;margin:0 auto;">
     	<a href="/" style="font-size:1.5em;font-weight:bold;text-decoration:none;">Stompy</a>
         <div style="height:10px;"></div>
-        <table style="font-size:.8em;text-align:left;">
+        <table>
             <tbody>
                 <tr>
                     <th>社名</th>
