--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="ブラウザゲームの開発運営。"/>
     <link rel="shortcut icon" href="/favicon.png">
     <style type="text/css">
-        body {color: #383530;font-family:'メイリオ', sans-serif,'Lucida Grande', Verdana, Arial, 'Hiragino Kaku Gothic Pro';line-height: 1.3;margin:0;padding:0;}
+        body {color: #383530;font-family:'メイリオ', sans-serif;line-height: 1.3;margin:0;padding:0;}
         a{color:#383530;}
         div{margin:0;padding:0;}
         table{font-size:.8em;text-align:left;border-collapse:collapse;border:none;border-spacing:0;}
@@ -17,11 +17,10 @@
         table tr{padding:0;margin:0;}
         table td{padding:5px 0 5px 5px;margin:0;}
     </style>
-    <meta name="viewport" content="width=300" />
+    <meta name="viewport" content="width=320" />
 </head>
 <body>
-    <div style="width:280px;padding:10px 0 10px;margin:0 auto;">
-        <div style="height:10px;"></div>
+    <div style="width:300px;padding:10px 0 10px;margin:0 auto;">
         <table>
             <tbody>
                 <tr>
