--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <table>
             <tbody>
                 <tr>
-                    <th>社名</th>
-                    <td>株式会社ストンピィ</td>
+                    <th colspan="2">株式会社ストンピィ</th>
                 </tr>
                 <tr>
                     <th>事業 </th>
