--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <table>
             <tbody>
                 <tr>
-                    <th colspan="2">株式会社ストンピィ</th>
+                       <th>社名</th><td>株式会社ストンピィ</td>
                 </tr>
                 <tr>
                     <th>事業 </th>
