--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <title>株式会社ストンピィ - Stompy</title>
-    <meta name="keywords" content="ストンピィ,stompy"/>
+    <title>株式会社ストンピィ</title>
+    <meta name="keywords" content="ストンピィ"/>
     <meta name="description" content="ブラウザゲームの開発運営。"/>
     <link rel="shortcut icon" href="/favicon.png">
     <style type="text/css">
