--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </tr>
                 <tr>
                     <th>所在地</th>
-                    <td>東京都渋谷区渋谷3-10-18-1310</td>
+                    <td>東京都渋谷区桜丘町23番17号<br/>シティコート桜丘408</td>
                 </tr>
                 <tr>
                     <th>電話</th>
