--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <th>事業 </th>
                     <td>ブラウザゲームの開発運営
                         <br/>-<a href="http://dragonbrave.com/">ドラゴンブレイブ</a> 
-                        <br/>-<a href="http://dragoncraze.com/">ドラゴンクレイズ</a>
+                        <br/>-<a href="https://dragoncraze.com/">ドラゴンクレイズ</a>
                         <br/>-<a href="https://orekou.net/">俺の甲子園</a>
                     </td>
                 </tr>
